--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 /Users/vincentsmedile/YREC5.1/models/yrec_final_grid2 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.z
+ filter=lfs diff=lfs merge=lfs -text
+*.py filter=lfs diff=lfs merge=lfs -text
